--- a/317181706/317181706.tex
+++ b/317181706/317181706.tex
@@ -1,2 +1,9 @@
 \chapter{Gutierrez Elizalde Jesus Israel}
+\begin{document}
+
+$x={-b^{+}_{-} \sqrt{b^{2}-4ac}}/2a$\\
+
+$d= \sqrt{(x_{2}-x_{1})^{2}+(y_{2}-y_{1})^{2}} $\\
+
+\end{document}
 
