subi tex e imagenes

--- a/410003725/410003725.tex
+++ b/410003725/410003725.tex
@@ -1,2 +1,4 @@
 \chapter{Luevano Ballesteros Ricardo Adrian}
-
+Me gusta pasear en bicicleta y dormir.
+\graphicspath{./pajarito.jpg}
+\graphicspath{./perro.jpg}
