Remove invalid TeX

--- a/317266245/317266245.tex
+++ b/317266245/317266245.tex
@@ -1,2 +1,2 @@
-\chapter{Gomez De La Torre Heidi Lizbeth}\\
-1. $x={-b+-{\sqrt{b^{2}-4ac}} \over 2a}$\\
+\chapter{Gomez De La Torre Heidi Lizbeth}
+
