--- a/317275605/317275605.tex
+++ b/317275605/317275605.tex
@@ -1,2 +1,17 @@
 \chapter{Liprandi Cortes Rodrigo}
 
+\verb!\texttt{Hola, mi nombre es Rodrigo y mis pasatiempos favoritos son jugar videojuegos (mis juegos favoritos son: Skyrim, The Witcher y Rainbow Six SIege), jugar con mis mascotas, leer libros, nadar y ver memes}!\\
+
+\begin{figure}[H] % float
+  \begin{center}
+    \includegraphics[width=450pt]{doge.webp}
+    \caption{Un perritou \smiley}
+  \end{center}
+\end{figure}
+
+\begin{figure}[H] % float
+  \begin{center}
+    \includegraphics[width=450pt]{skyrim.jpg.webp.webp}
+    \caption{Un perritou \smiley}
+  \end{center}
+\end{figure}
