--- a/317061143/317061143.tex
+++ b/317061143/317061143.tex
@@ -1,2 +1,40 @@
 \chapter{Rico Gama Victor}
 
+\section{Biografia}
+  Mi nombre es Victor Rico Gama tengo 17 años y estudio en la facultad de ciencias, studie mi bachillerato en el colegio de ciencias y humanidades plantel oriente, tengo una hermana que se llama sarahi, me gusta mucho nadar y jugar squash por las tarde, me gusta todo tipo de musica
+  
+% \end{Biografia}
+
+\begin{figure}[h!]
+  \centering
+  \includegraphics[width=0.3 \textwidth]{conejito}
+
+ % \label{}
+  
+\end{figure}
+
+
+
+\section{academia}
+Lo que sigue es una lista de nuestras metas en la vida
+\begin{itemize}
+\item Terminar la carrera de Licenciatura en ciencias de la computación
+\item Tener un negocio de comida o una cafeterias
+\item Sacar buenas calificaciones en la universidad
+\item Tener una casa y una linda familia
+  
+  
+\end{itemize}
+
+\section{pasatiempos y cultura}
+
+Mis hobbis favoritos son:
+\begin{enumerate}
+\item Cocinar
+\item Escuchar musica
+\item bailar
+\item Salir a fiestas
+\item Salir con mis amigos
+  \item Jugar ajedrez
+  
+\end{enumerate}
