Imagen Antonio Martinez

--- a/310096593/310096593.tex
+++ b/310096593/310096593.tex
@@ -1,4 +1,6 @@
 \chapter{Martínez Gutiérrez Antonio Daniel}
 
-\[x=\frac{-b\pm\sqrt{b^2-4ac}}{2a}\]
+Estudiante de Doctorado en Ciencias Biomédicas
+
+\includegraphics[scale=0.3]{./310096593/microRNA.png}
 
