--- a/317266245/317266245.tex
+++ b/317266245/317266245.tex
@@ -1,2 +1,4 @@
 \chapter{Gomez De La Torre Heidi Lizbeth}
 
+$ d=\sqrt{{(x_{2}-x_{1})}^{2}+{(y_{2}-y_{1})}^{2}}$
+\incluidegraphics{./317266245/pez.jpg}
