Esta es la pagina de Demian

--- a/317529180/317529180.tex
+++ b/317529180/317529180.tex
@@ -1,2 +1,11 @@
 \chapter{Monterrubio Acosta Demian Alejandro}
+Toda mi vida he vivido en la CDMX, no suelo viajar mucho, me gusta quedarme en mi casa.
+Mi animal favorito son los cerdos.
+Mi fruta favorita es la pera.
+ME gusta jugar videojuegos y ver anime, no suelo dormir mucho pero tambien me gusta.
+:)
+Tambien me gusta el helado de mazapan.
 
+\includegraphics{./317529180/puerco.jpg}
+
+:)
