Diego Arturo Velazquez Trejo

--- a/317227257/317227257.tex
+++ b/317227257/317227257.tex
@@ -1,2 +1,8 @@
 \chapter{Velazquez Trejo Diego Arturo}
 
+Formula General: {\fontsize{80}{0}\select font LaTex}
+$ \\ x = \frac{-b\pm\sqrt{b^{2}-4ac}}{2a} \\$
+Distancia Euclediana: {\fontsize{80}{0}\select font LaTex}
+$ \\ \sqrt{(x_1 - x_2)^2 + (y_1 - y_2)^2} \\$
+
+\includegraphics{./317227257/velaske.jpg}
