--- a/317155657/317155657.tex
+++ b/317155657/317155657.tex
@@ -1,6 +1,7 @@
 \chapter{Lopez Ceballos Hannia Laura}
 
-\begin{document}
 $d=\sqrt{(x_2-x_1)^2+(y_2-y_1)^2}$
-\end{document}
+
+\includegraphics{./317155657/317155657.jpg}
+
 
