--- a/317277582/317277582.tex
+++ b/317277582/317277582.tex
@@ -1,2 +1,12 @@
 \chapter{Deloya Andrade Ana Valeria}
-
+\section{biografía}
+Naci en la Ciudad de México el 30 de enero de 2001. Tengo una hermana menor. Y aparentemente voy a estudiar la carrera de Ciencias de la Computación. 
+\section{académia}
+Estudié en la Escuela Nacional Preparatoria 1 "Gabino Barreda" durante tres años.
+\section{pasatiempos y cultura}
+En mi tiempo libre me gusta:
+\begin{enumerate}
+\item Hacer dibujos de árboles y pegarlos en mi cuarto.
+\item Ver las tortugas ninja.
+\item Escuchar música de Taylor Swift.
+\end{enumerate}
