ya subi mi descripcion

--- a/420004547/420004547.tex
+++ b/420004547/420004547.tex
@@ -1,2 +1,4 @@
 \chapter{Barra Maldonado José Andrés}
+Tengo 17 años, vio en la ciudad de Mexico con mi hermana. En las tardes me gusta ver peliculas, hacer ejercicio, jugar videojuegos y salir entre otras cosas.
+$e=mc²$
 
