Agregar los elementos 2

--- a/420003722/420003722.tex
+++ b/420003722/420003722.tex
@@ -16,7 +16,7 @@
 	Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis in erat 		ullamcorper, iaculis mauris eget, faucibus enim. Nam eget elit non est 		fermentum molestie id ut felis. Donec faucibus efficitur enim. Nullam 		vitae 		nisi magna. Donec sit amet felis commodo magna rutrum 			vestibulum sit amet quis augue. Aenean gravida hendrerit dolor, sit amet 		condimentum neque volutpat imperdiet. Aenean sed justo arcu. Nulla 			ultrices ex mi. Etiam bibendum lectus at tortor luctus consectetur. Nulla 	accumsan neque ut augue aliquet hendrerit. Mauris viverra lectus ac lacus 	scelerisque efficitur. Orci varius natoque penatibus et magnis dis 			parturient montes, nascetur ridiculus mus. Ut fringilla rhoncus   			hendrerit. Pellentesque habitant morbi tristique senectus et netus et  		malesuada fames ac turpis egestas. Praesent a pellentesque risus. Cras 		bibendum rutrum porttitor.
 		\begin{figure}[h!]
 			\centering
-			\includegraphics[scale=0.8]{perro.jpg}
+			\includegraphics[scale=0.8]{420003722/perro.jpg}
 			\caption{Este es un perro parecido al mio}
 		\end{figure}		
 	\section{Pasatiempos y cultura}
