--- a/317219038/317219038.tex
+++ b/317219038/317219038.tex
@@ -1,2 +1,11 @@
 \chapter{Bonilla Ruiz Roberto Adrian}
 
+\section{Biografía}
+ -Nací en el estado de México, tengo 17 años acabo de ingresar a la carrera de Ciencias de la Computación
+    me gusta la tecnologia, desde pequeño siempre he practicado basketbol, en lo personal me considero alguien sociable pero si se trata de poner mi historia en un papel publico me considero alguien reservado
+
+\section{Academia}
+Colegio de Ciencias y HUmanidades, Plantel: Azcapotzalco
+
+\section{Pasatiempos y Cultura}
+-Me gusta hacer deporte, amo los audifonos y la musica electronica, me gusta mucho ayudar a otros y enseñarles aquello que necesitan, una de las cosas que a mi me gustaria cumplir a futuro saliendo de la carrera es trabajar para google y en un futuro más lejano, tener una empresa de seguridad informática 
