hice mi parte del libro

--- a/317143980/317143980.tex
+++ b/317143980/317143980.tex
@@ -1,2 +1,8 @@
 \chapter{Mendez Avila Luis Geovanni}
 
+
+Hola mi nombre es Luis. Egresé de CCH Nucalpan. Me gustan los perros, leer y escuchar música, armar cubos rubik, ver series, perder un buen de tiempor en Fcebook y dormirme tarde,.
+Me gustaría salir en cuatro años de la carrera. Espero salir sin problemas de está carrera, así que me propendré cambiar malos hábitos para poder ser mejor.
+Soy un poco más grande que algunos de mis compañeros, debido a que antes de entrar a CCH , había ingresado al CECyT 9 y me fue bastante mal, lo que me atrasó un par de años.
+ 
+
