--- a/410003725/410003725.tex
+++ b/410003725/410003725.tex
@@ -1,4 +1,14 @@
 \chapter{Luevano Ballesteros Ricardo Adrian}
 Me gusta pasear en bicicleta y dormir.
-\includegraphics{410003725/pajarito.jpg}
-\includegraphics{410003725/perro.jpg}
+
+\begin{figure}
+  \begin{center}
+    \includegraphics{410003725/pajarito.jpg}
+    \caption{Un pajarito.}
+  \end{center}
+\end{figure}
+
+\begin{figure}
+  \includegraphics{410003725/perro.jpg}
+  \caption{Un perro feliz.}
+\end{figure}
