--- a/317061143/317061143.tex
+++ b/317061143/317061143.tex
@@ -7,7 +7,7 @@
 
 \begin{figure}[h!]
   \centering
-  \includegraphics[width=0.3 \textwidth]{conejito}
+  \includegraphics[width=0.3 \textwidth]{317061143/conejito}
 
  % \label{}
   
