Daniel Linares Gil

--- a/420490056/420490056.tex
+++ b/420490056/420490056.tex
@@ -1,2 +1,30 @@
 \chapter{Linares Gil Daniel}
 
+
+
+\section{Biografía}
+Mi nombre es Daniel Linares Gil. Tengo 19 años. Soy de La habana, Cuba. LLegué a la Ciudad de México hace un año.
+
+\section{Academia}
+Estudié la preparatoria en Cuba en el IPVCE Vladimir Ilich Lenin, una escuela interna de ciencias exactas y me gradué en el 2018.\\
+
+\begin{figure}
+  \centering
+  \includegraphics[width=0.8\textwidth]{420490056/1.jpg}
+\end{figure}
+
+\section{Pasatiempos y cultura}
+
+\subsection{Hobbies}
+\begin{itemize}
+\item{Series de Televisión}
+\item{Música}
+\item{Videojuegos}
+\end{itemize}
+
+\subsection{Deportes que sigo}
+\begin{itemize}
+\item{Fútbol}
+\item{Basketball}
+\item{Beisbol}
+\end{itemize}
