ya subi mi descripcion

--- a/420004482/420004482.tex
+++ b/420004482/420004482.tex
@@ -1,2 +1,5 @@
 \chapter{Márquez Pérez Fernando}
+Tengo 19 años, vivo en la CDMX, mis hobbies son: jugar videojuegos , ver anime y programar. Mi juego favortio ahora mismo es Hollow Knight. Me interesan las inteligencias artifiiales y el machine learning
+
+\[3141592653489\]
 
