--- a/317034808/317034808.tex
+++ b/317034808/317034808.tex
@@ -1,2 +1,17 @@
 \chapter{Lopez Miranda Angel Mauricio}
+\section{biografia}
+yo naci en la CDMX tengo 17 años una hermana mayor y un perro y vivo con mis papas
+\begin{figure}
+  \centering
+  \includegraphics[width=0.8\textwidth]{perrito.jpg
+  \caption{este es mi perro}
+\end{figure}
+\section{académia}
+estudie en la prepa 1 y acabe la prepa en tres años, curso en el grupo 603 orientado a carreras de area 1
+\section{pasatiempos y cultura}
+\bigin{itemize}
+\item me gusta jugar videojuegos
+\item me gusta escuchar heavy metal
+\item me gusta practicar taekwondo
+\end{itemize}
 
