--- a/317100664/317100664.tex
+++ b/317100664/317100664.tex
@@ -1,2 +1,52 @@
 \chapter{Peña Mata Juan Luis}
 
+\section{Biografía}
+Mi nombre es Juan Luis Peña Mata, nací el 19 de noviembre
+del 2001, en algún hospital de la Ciudad de México, desde
+que nací viví en Chalco estado de México, me gustan los
+patos de goma, y espero que algún día dominen el mundo,
+ahora mismo estoy en el curso propedeutico de ciencias de
+la computación, y pondre en este capitulo todo lo que
+aprendí en el mismo.
+
+\section{Académia}
+Curse el jarin de niños y la primaria en la escuela
+Luis G. Urbina, la secundario en la escula 15 de mayo
+y el bachillerato en CCH Naucalpan, en él no obtuve muy
+bunas calificaciones, aunque pude terminar en tiempo
+y forma, no me siento muy sadisfecho con lo que hice
+durante ese tiempo, pero logre quedarme en la carrera que
+queria.
+
+\section{Pasatiempos}
+Ahora, listare algunos de mis pasatiempos.
+\begin{itemize}
+\item Jugar videojuegos.
+\item Leer.
+\item Ver series y peliculas.
+\end{itemize}
+
+Tambien agregare imagenes de mis cosas favoritas en los puntos dados antes
+
+\begin{figure}[h!]
+  \begin{subfigure}{0.33\textwidth}
+    \centering
+    \includegraphics[width=0.4\textwidth]{317100664/juegof.png}
+    \caption{Mi videojuego favorita}
+    \label{fig:videojuego favorito}
+  \end{subfigure}
+  ~
+  \begin{subfigure}{0.33\textwidth}
+    \centering
+    \includegraphics[width=0.4\textwidth]{317100664/librof.jpg}
+    \caption{Mi libro favorito}
+    \label{fig:libro favorito}    
+  \end{subfigure}
+  ~
+  \begin{subfigure}{0.33\textwidth}
+    \centering
+    \includegraphics[width=0.4\textwidth]{317100664/dw1.jpg}
+    \caption{Mi serie Favorita}
+    \label{fig:serie favorita}
+  \end{subfigure}
+\end{figure}
