--- a/317275605/317275605.tex
+++ b/317275605/317275605.tex
@@ -2,14 +2,14 @@
 
 Hola, mi nombre es Rodrigo y mis pasatiempos favoritos son jugar videojuegos (mis juegos favoritos son: Skyrim, The Witcher y Rainbow Six Siege), jugar con mis mascotas, leer libros, nadar y ver memes.
 
-\begin{figure}[H] % float
+\begin{figure}[h] % float
   \begin{center}
     \includegraphics[width=450pt]{317275605/syrim.jpg}
     \caption{Mi videojuego favorito} 
   \end{center}
 \end{figure}
 
-\begin{figure}[H] % float
+\begin{figure}[h] % float
   \begin{center}
     \includegraphics[width=450pt]{317275605/doge.jpg}
     \caption{Un Doge}
