Agregando mi rama

--- a/314152138/314152138.tex
+++ b/314152138/314152138.tex
@@ -1,2 +1,17 @@
 \chapter{Garcia Chavelas Jonas}
 
+\section{Biografía}
+Existo desde hace un tiempo.
+
+\section{Académia}
+Estudiuo desde hace un tiempo.
+
+\section{Pasatiempos y cultura}
+Me gustan mucho las series así que aquí mencionare algunas:
+\begin{itemize}
+\item The Wire
+\item Chernobyl
+\item True Detective
+\item Breaking Bad
+\item The Expanse
+\end{itemize}
