Neider Sánchez Reza

--- a/317020931/317020931.tex
+++ b/317020931/317020931.tex
@@ -1,2 +1,15 @@
 \chapter{Sanchez Reza Neider}
 
+\section{Biografía}
+Mi nombre es Neider Sánchez Reza. Tengo 18 años. Mi nombre, de acuerdo con mis padres, significa \textit{como ninguno}. Nací en la Ciudad de México y he vivido aquí toda mi vida. Quisiera poner más cosas, pero tengo muy poca imaginación.\\ Me gustan los gatos. :3
+
+\section{Academia}
+Provengo de la ENP 8, mi ingreso a la licenciatura fue por medio de Pase Reglamentado. Al obtener un promedio superior a 9.0, no tuve muchas preocupaciones a la hora de elegir carrera y plantel.
+
+\section{Pasatiempos y cultura}
+Actualmente toco el teclado y en un futuro espero tocar el piano\\
+Además, suelo pasar mucho tiempo en redes sociales, como:\\
+\begin{itemize}
+\item Facebook
+\item Instagram
+\end{itemize}
